--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -4,6 +4,10 @@
         position: relative;
         width: 750px;
         margin: 0 auto;
+        img {
+            width: 750px;
+        }
+
     }
     .slick-prev, .slick-next {
         position: absolute;
