--- a/src/sass/blocks/_review.scss
+++ b/src/sass/blocks/_review.scss
@@ -1,11 +1,7 @@
 .review {
+    padding-bottom: 20px;
     .title {
         margin-bottom: 20px;
-    }
-    hr {
-        width: 100%;
-        height: 4px;
-        background: #F6F6F6;
     }
     &__item {  
         display: flex;
@@ -17,16 +13,6 @@
     }
     &__wrapper {
         margin-left: 60px;
-        display: flex;
-        flex-direction: column;
-    }
-    &__descr {
-        margin-top: 19px;
-        width: 656px;
-        font-size: 16px;
-        font-weight: 300;
-        line-height: 19px;
-        color: #0D0D0D;
     }
     &__subtitle {
         font-size: 18px;
@@ -38,5 +24,18 @@
         font-size: 14px;
         font-weight: 300;
         color: #646464;
+    }
+    &__descr {
+        margin-top: 19px;
+        width: 656px;
+        font-size: 16px;
+        font-weight: 300;
+        line-height: 19px;
+        color: #0D0D0D;
+    }
+    hr {
+        width: 100%;
+        height: 4px;
+        background: #F6F6F6;
     }
 }
