--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -7,4 +7,13 @@
         font-weight: 500;
         color: #FFFFFF;
     }
+    .error {
+        border: 1px solid red;
+    }
+    label.error {
+        color: #FFFFFF;
+        border: none;
+        text-align: center;
+        margin-bottom: 15px;
+    }
 }
